--- a/debian/rules
+++ b/debian/rules
@@ -21,4 +21,5 @@ override_dh_auto_test:
 
 override_dh_auto_install:
 	python setup.py install -f --optimize=1 --install-layout=deb --root=$(CURDIR)/debian/tmp --prefix=/usr/
+	sed -i -e 's/module = manage_in_tftpd/module =  manage_tftpd_py/' $(CURDIR)/debian/tmp/etc/cobbler/modules.conf
 
